--- a/01 - Introduction to R and Git/git-and-github.Rmd
+++ b/01 - Introduction to R and Git/git-and-github.Rmd
@@ -38,7 +38,7 @@ In order to send the changes to your online repository, you need to stage, commi
 
 <h2>Setting an Upstream Branch</h2>
 
-Since changes in your repository don't show up in mine, I won't know if you've created a really neat script that you want to share with the group. To do this, you'll need to open a terminal. Type <i>git remote -v </i> to check that you have two origins, one to fetch and one to push. Next, you want to set an upstream branch (my repository) to sync with your fork. To do this, type <i>git remote add upstream https://github.com/elizagrames/intro.R.</i> Verify that the change happened by doing <i>git remote -v </i> again. 
+Since changes in your repository don't show up in mine, I won't know if you've created a really neat script that you want to share with the group. To do this, you'll need to open a terminal. Type <i>git remote -v </i> to check that you have two origins, one to fetch and one to push. Next, you want to set an upstream branch (my repository) to sync with your fork. To do this, type <i>git remote add upstream https://github.com/elizagrames/Rstats.</i> Verify that the change happened by doing <i>git remote -v </i> again. 
 
 Next, you want to fetch changes from my branch. To do this, type <i>git fetch upstream</i>, hit enter, then do <i>git checkout master</i>, hit enter, and finally do <i>git merge upstream/master</i> and hit enter. This will pull any new changes from my copy of the repository and merge them with yours. Assuming you haven't changed any of my files in a way that is unmergeable, it will go through just fine. Now, your local copy of the repository is synced with my copy, but your GitHub is behind. To send the new changes you just downloaded from me to your GitHub repository, click on the green push button. 
 
