--- a/01 - Introduction to R and Git/git-and-github.Rmd
+++ b/01 - Introduction to R and Git/git-and-github.Rmd
@@ -22,9 +22,9 @@ In bash, type <i>git config --global user.email "youruseremail@uconn.edu"</i> an
 <h2>Forking a Repository</h2>
 For this class, we have a master repository of course materials, notes, data, scripts, etc... You're going to want to work with these materials in RStudio, so you need to copy the entire repository to your computer. You also want to be able to suggest changes and contribute helpful scripts to the repository (especially if you're teaching a week). This means you need to fork the original repository.
 
-To do this, go to my [GitHub account](https://github.com/elizagrames/intro.R) and fork the repository. The button to do this is in the upper right corner. When the process is done, you should be on a new page with a repository still called intro.R, but it's now associated with your profile. You've created an identical copy of my repository, but it's a snapshot in time. If I make changes to the original repository, you won't see them in your repository; similarly, I won't see changes you make. 
+To do this, go to my [GitHub account](https://github.com/elizagrames/Rstats) and fork the repository. The button to do this is in the upper right corner. When the process is done, you should be on a new page with a repository still called Rstats, but it's now associated with your profile. You've created an identical copy of my repository, but it's a snapshot in time. If I make changes to the original repository, you won't see them in your repository; similarly, I won't see changes you make. 
 
-Next, you want to get a copy of the repository on your computer since right now it only exists on your GitHub account. To do this, go to RStudio, click on File > New Project > Version Control and enter the URL of your forked repository (https://github.com/yourusername/intro.R). The other fields should populate automatically, though you may want to change the directory you clone it into. 
+Next, you want to get a copy of the repository on your computer since right now it only exists on your GitHub account. To do this, go to RStudio, click on File > New Project > Version Control and enter the URL of your forked repository (https://github.com/yourusername/Rstats). The other fields should populate automatically, though you may want to change the directory you clone it into. 
 
 Once it is cloned, you'll notice that RStudio automatically set your working directory to the cloned repository and that all the subdirectories and files are shown in your Files tab. You can now work on the project offline. 
 
@@ -32,7 +32,7 @@ Once it is cloned, you'll notice that RStudio automatically set your working dir
 
 Right now, there are three copies of the same repository - my original repository, your forked repository stored on GitHub, and the repository on your computer. Changes in any one of these repositories will not affect the other two. 
 
-In R, create a new script and save it anywhere in your intro.R repository. This is a good time to remind you that this is all going to be publicly visible as tracked changes in your repository even if you delete the files later. Once you save your script, go and look at your repository on GitHub (you might want to refresh the page). The new file isn't there. 
+In R, create a new script and save it anywhere in your Rstats repository. This is a good time to remind you that this is all going to be publicly visible as tracked changes in your repository even if you delete the files later. Once you save your script, go and look at your repository on GitHub (you might want to refresh the page). The new file isn't there. 
 
 In order to send the changes to your online repository, you need to stage, commit, and push the changes. You have a new tab in RStudio called Git. Go to it and you'll see that your new file is listed with some question marks. This means it is untracked. Check the box to stage it, then click on Commit. You'll need to enter a Commit message (again, this is public record so you might want to just say something like "uploaded new script"). Click on the Commit button. A window will pop up and tell you it changed something. You can click close. Next, click on the green arrow labeled Push in the upper right corner. This sends your changes to your GitHub repository, which you can confirm by refreshing that page. 
 
