--- a/03 - Functions and Common Tasks/Gen_TeachingScript_Functions.Rmd
+++ b/03 - Functions and Common Tasks/Gen_TeachingScript_Functions.Rmd
@@ -1,15 +1,26 @@
 ---
-title: "Gen_TeachingSript_Functions"
-output: html_notebook
+title: "A Teaching Script for Learning Functions"
+output:
+  pdf_document: default
+  html_notebook: default
+  html_document: default
 ---
+Genevieve Nuttall
 
-LEARNING BASIC FUNCTIONS IN R
-* References: 
-http://mosaic-web.org/go/Master-Starting.pdf  https://campus.datacamp.com/courses/writing-functions-in-r/a-quick-refresher?ex=1 
-https://www.datacamp.com/community/tutorials/tutorial-on-loops-in-r#gs.5WuQQ7c
-https://www.r-bloggers.com/how-to-write-the-first-for-loop-in-r/
 
-Functions:
+##### LEARNING BASIC FUNCTIONS IN R
+
+## **References:**
+
+[link 1](http://mosaic-web.org/go/Master-Starting.pdf)
+
+[link 2](https://campus.datacamp.com/courses/writing-functions-in-r/a-quick-refresher?ex=1)
+
+[link 3](https://www.datacamp.com/community/tutorials/tutorial-on-loops-in-r#gs.5WuQQ7c)
+
+[link 4](https://www.r-bloggers.com/how-to-write-the-first-for-loop-in-r/)
+
+## Functions:
 
 In R, functions are extremely important. Every command that you run is probably a set of functions that someone else created for you to use. Every package is jammed full of tons of functions that we are able to call with a simple command. 
 
@@ -17,15 +28,21 @@ For example, when you type mean(x), R will give you back a number. The only reas
 
 ```{r}
 
-ggplot
+# Let's look at what makes up the function to find variance:
 
-# If you run this, you will see the basic syntax of the function that runs when you run the ggplot() command, where the function is stored, and what it is named as ("ggplot" in this case). Pretty cool!
+var
+
+# If you run this, you will see the basic syntax of the function that runs when you run the var() command, where the function is stored, and what it is named as ("var" in this case). Pretty cool!
 
 ```
 
 Basically, using and creating functions comes down to two questions: 
-1) What do we want the computer to do? -> Tells us which function to use
-2) What information does the  computer need to compute this? -> Tells us which arguments we should use
+
+1. What do we want the computer to do? 
+      * Tells us which function to use
+      
+2. What information does the  computer need to compute this? 
+      * Tells us which arguments we should use
 
 
  Here are some examples of built-in functions you may have used before in R:
@@ -77,27 +94,27 @@ lines(smooth.peak1.standard)
 ```
 
 
-Luckily, R isn't too selfish, and it lets you make functions too so let's give it a shot! 
+> Luckily, R isn't too selfish, and it lets you make functions too so let's give it a shot! 
 
-*----------------------------------------------------------------------------------------------------------
 
-Writing functions! 
+
+### Writing functions! 
 
 This will be useful to you at some point when you need to make a specific function for data analysis.
 
 In R, there is a basic format for writing a function:
 
-*----------------------------------------------------------------------------------------------------------
-function <- functionname(argument1,argument2){body of function}
-*----------------------------------------------------------------------------------------------------------
+
+**function <- functionname(argument1,argument2){body of function}**
+
 
 There are three components to this command:
-1) formal arguments (in parentheses)
-2) body {in squiqqly brackets}
-3) environment - where the function information is stored
+1. formal arguments (in parentheses)
+2. body {in squiqqly brackets}
+3. environment - where the function information is stored
 
 When you run a function, R will always return the last statement of the command, which will be your {body}
-**Make sure you use the {} brackets when writing the body of a function
+*Make sure you use the {} brackets when writing the body of a function*
 
 Try creating a basic function for practice: 
 ```{r}
@@ -130,7 +147,7 @@ absolutely(-7)
 absolutely(28)
 ```
 
-When will you need to write your own functions? For loops and if loops are good examples!!!
+When will you need to write your own functions? *For loops* are good examples!!!
 
 For loops are functions used to repeat a line of code. They are helpful if you need to cycle through a set of steps - instead of coding each repeated step, you can use a for loop to do it for you.
 
@@ -205,16 +222,18 @@ matrix1
 
 For loops are one type of loop. In R, there are three main types of loops:
 
-- for loops
-- while loops
-- repeat loops
+* for loops
+* while loops
+* repeat loops
 
-Depending on your needs, you might want to use a different type of loop. To learn more about how to write different loops, visit https://www.datacamp.com/community/tutorials/tutorial-on-loops-in-r#gs.5WuQQ7c
+Depending on your needs, you might want to use a different type of loop. To learn more about how to write different loops, visit [datacamp](https://www.datacamp.com/community/tutorials/tutorial-on-loops-in-r#gs.5WuQQ7c)
 
 In some cases, it might be easier to use an apply() function which can act as a shortcut for a loop. 
 
-*----------------------------------------------------------------------------------------------------------
 
-Remember, R is a world of functions. The ones we covered today are just a small percentage of what is out there on R. To go over more commonly used fuctions, visit http://www.sr.bham.ac.uk/~ajrs/R/r-function_list.html
+
+> Remember, R is a world of functions. The ones we covered today are just a small percentage of what is out there on R. 
+
+To go over more commonly used fuctions, view this [list of functions](http://www.sr.bham.ac.uk/~ajrs/R/r-function_list.html)
 
 
